Update server, new logging.